--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".user.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".partner.property.PartnerCouponList"
             android:exported="false" />
         <activity
@@ -62,7 +65,7 @@
         <activity
             android:name=".partner.property.sub_property.EditImageListActivity"
             android:exported="false" />
-            <activity
+        <activity
             android:name=".partner.booking.PartnerBookingDetail"
             android:exported="false" />
         <!--
